Updated Header layout to fix nav alignment and styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -145,6 +145,13 @@
   pointer-events: none;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 
 .toast {
   background-color: rgba(243, 46, 46, 0.881); 
